temp/681aefe0cb463/error.txt
../temp/681aefe0cb463/solution.cpp: In function 'int main()':
../temp/681aefe0cb463/solution.cpp:29:4: error: 'cout' was not declared in this scope
    cout<<"15";
    ^~~~
../temp/681aefe0cb463/solution.cpp:29:4: note: suggested alternative:
In file included from ../temp/681aefe0cb463/solution.cpp:2:0:
c:\mingw\lib\gcc\mingw32\6.3.0\include\c++\iostream:61:18: note:   'std::cout'
   extern ostream cout;  /// Linked to standard output
                  ^~~~
../temp/681aefe0cb463/solution.cpp: At global scope:
../temp/681aefe0cb463/solution.cpp:31:5: error: expected unqualified-id before 'return'
     return 0;
     ^~~~~~
../temp/681aefe0cb463/solution.cpp:32:1: error: expected declaration before '}' token
 }
 ^
